--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -57,7 +57,8 @@
     <header class="hero">
       <picture class="pics">
         <source media="(max-width: 600px)" srcset="./images/hero-image_4-small.jpg" type="image/jpg">
-        <img class="img-hero" src="./images/hero-image_4-large.jpg" 
+        <source media="(min-width: 600px)" srcset="./images/hero-image_4-large.jpg" type="image/jpg">
+        <img class="img-hero" src="../images/hero-image_4.jpg" 
              alt="Croissant pics">
       </picture>
     </header>
