--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -36,7 +36,7 @@
         <div class="nav">
           <ul>
             <li class="list">
-              <a href="http://localhost:9000/" class="font-sizing">HOME</a>
+              <a href="/" class="font-sizing">HOME</a>
             </li>
             <li class="list">
               <a href="#/favorite" class="font-sizing">Favorite</a>
