--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mooli&display=swap" rel="stylesheet">
     <link rel="icon" href="./icons/icon-72x72.png">
-    <script src="https://use.fontawesome.com/b070c8f1df.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
   </head>
   <body>
     <a href="#mainContent" class="skip-link">Skip Untuk Ke Konten Utama</a>
@@ -36,7 +36,7 @@
         <div class="nav">
           <ul>
             <li class="list">
-              <a href="http://localhost:9000/" class="font-sizing">HOME</a>
+              <a href="/" class="font-sizing">HOME</a>
             </li>
             <li class="list">
               <a href="#/favorite" class="font-sizing">Favorite</a>
